--- a/index.html
+++ b/index.html
@@ -5,44 +5,33 @@
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Kanit|Righteous" rel="stylesheet">
 	<!-- Bootstrap css -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- My layout design -->
 	<link rel="stylesheet" href="style.css">
 
 	<!-- Mail Chimp -->
 	<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-		<style type="text/css">
-			#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-					/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-					   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-		</style>
+		
 </head>
-<body>
-	<header class="headers text-center text-white d-flex">
-		<div class="container-fluid my-auto">
-			<div class="row">
-				<div class="col-lg-12">
-					<h1 class="text-uppercase move">A Humongous Startup Event Of The Decade</h1><hr>
-				</div>
-				<!-- Begin MailChimp Signup Form -->
-				<div id="mc_embed_signup">
-				<form action="https://project.us18.list-manage.com/subscribe/post?u=a7f2d6db6a14bffa63c2d884f&amp;id=e7ac68d1ed" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-				    <div id="mc_embed_signup_scroll">
-				    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-				    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a7f2d6db6a14bffa63c2d884f_e7ac68d1ed" tabindex="-1" value=""></div>
-				    <div class="clear"><input class="btn btn-outline-success text-uppercase btn-size" type="submit" value="Be Enlightened" name="subscribe" id="mc-embedded-subscribe"></div>
-				    </div>
-				</form>
-				</div>
+  <body>
 
-				<!--End mc_embed_signup-->
-			</div>
-		</div>
-	</header>
+    <div class="container h-100 d-flex align-items-center">
+      <div class="row">
+        <header class="text-center col-12">
+          <h1 class="text-uppercase"><strong>The starup event of the year!</strong></h1>
+        </header>
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-</body>
+        <div class="buffer"></div>
+
+        <section class="text-center col-12">
+          <hr>
+          <a href="https://mailchi.mp/46d8f6a308f7/test-landing" target="_blank">
+            <button class = "btn btn-primary">Find out more</button>
+          </a>
+        </section>
+      </div>
+    </div>
+
+  </body>
 </html>
+			
