--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container h-100 d-flex align-items-center">
       <div class="row">
         <header class="text-center col-12">
-          <h1 class="text-uppercase"><strong>The starup event of the year!</strong></h1>
+          <h1 class="text-uppercase"><strong>Check out my landing page!</strong></h1>
         </header>
 
         <div class="buffer"></div>
