--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container h-100 d-flex align-items-center">
       <div class="row">
         <header class="text-center col-12">
-          <h1 class="text-uppercase animate__flipInX"><strong>Check out my very basic test landing page!</strong></h1>
+          <h1 class="text-uppercase animate__animated animate__bounceInDown"><strong>Check out my very basic test landing page!</strong></h1>
         </header>
 
         <div class="buffer"></div>
